M2 accept ADR-0029 after 94-test anti-lock-in gate